# ugractf-2024-school

./: LICENSE  README.md
tasks/canep/: README.md  WRITEUP.md  canep.yaml
tasks/canep/app/: server.py
tasks/canep/writeup/: exploit.js
tasks/cartographer/: README.md  WRITEUP.md  cartographer.yaml  solve.py
tasks/cartographer/app/: Dockerfile  generator.py  geotag.py  prepare.py  requirements.txt  server.py
tasks/finestructure/: README.md  WRITEUP.md  finestructure.yaml  generator.py
tasks/finestructure/private/: .gitattributes  build-template.sh  decr.py  template.img
tasks/fingergiving/: README.md  WRITEUP.md  fingergiving.yaml
tasks/installit/: Dockerfile.generator  README.md  WRITEUP.md  generate.sh  installit.yaml
tasks/installit/task/: CMakeLists.txt  fast_flag.c  install_it.c  patch_it.c
tasks/installit/task/include/: code.h  iterator.h  linked_string.h  murmur.h
tasks/installit/task/src/: code.c  iterator.c  linked_string.c  murmur.c
tasks/medium/: .gitattributes  README.md  WRITEUP.md  docker-compose.yml  generator.py  medium.yaml  writeup.json
tasks/portknocking/: .gitattributes  README.md  WRITEUP.md  generate.py  makezip.sh  portknocking.yaml
tasks/portknocking/app/: Dockerfile  client.py  docker-compose.yml  exploit.py  generate.sh  pyproject.toml  run.sh  server.py
tasks/portknocking/app/epkp/: client.py  ecdhe.py  matrix.py
tasks/skinparadox/: .gitattributes  Dockerfile.keygen  README.md  WRITEUP.md  keygen.py  mkkeygen  skinparadox.yaml  solve.py
tasks/snapandgo/: README.md  WRITEUP.md  snapandgo.yaml
(+25 files in other folders)
