[tool.poetry]
name = "epkp"
version = "1.0"
description = "Encrypted Port Knocking Protocol Implementation"
authors = ["Nikita Sychev <root@nsychev.ru>"]

[tool.poetry.dependencies]
python = "^3.12"
cryptography = "^42.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
